# shruggie-indexer

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  shruggie-indexer-cli.spec  shruggie-indexer-gui.spec  shruggie-indexer-plan.md  shruggie-indexer-spec.html  shruggie-indexer-spec.md  shruggie-indexer-spec_01.md  shruggie-indexer-spec_02.md  shruggie-indexer-spec_03.md  shruggie-indexer-spec_04.md  shruggie-indexer-spec_05.md  shruggie-indexer-spec_06.md  shruggie-indexer-spec_07.md  shruggie-indexer-spec_08.md  shruggie-indexer-spec_09.md  shruggie-indexer-spec_10.md  shruggie-indexer-spec_11.md  shruggie-indexer-spec_12.md  shruggie-indexer-spec_13.md  shruggie-indexer-spec_14.md  shruggie-indexer-spec_15.md  shruggie-indexer-spec_16.md  shruggie-indexer-spec_17.md  shruggie-indexer-spec_18.md  shruggie-indexer-spec_OUTLINE.md  shruggie-indexer.code-workspace  sitemap.xml
.archive/: 20260219-002-shruggie-indexer-plan.md  20260223-001-Updates.md  20260223-001-Updates_TEMPLATE.txt  20260223-002-Updates.md  20260223-002-Updates_TEMPLATE.txt  20260223-002-ecosystem-direction.md  20260224-002-Updates.md  20260225-002-Updates.md  20260225-002-Updates_TEMPLATE.txt  20260225-003-Updates.md  20260225-003-Updates_TEMPLATE.txt  20260225-004-GUI-BugBrief-DiscoveryHang.md  20260225-004-GUI-BugBrief-DiscoveryHang_TestCaseDataTree.json  20260225-005-Updates.md  20260225-006-Updates.md  20260225-007-Updates.md  20260225-007-Updates_TEMPLATE.txt  20260227-001-Updates.md  20260227-001-Updates_TEMPLATE.txt  20260227-002-Fix-GUI-Click-Crash.md  20260227-003-Updates.md  20260227-003-Updates_TEMPLATE.txt  20260227-004-Normalize-AppData-Storage.md  20260228-001-Normalize-AppData-Storage-Pass2.md  20260301-001-Updates.md  20260301-001-Updates_TEMPLATE.txt  20260301-002-Updates.md  20260301-002-Updates_TEMPLATE.txt  20260301-003-ecosystem-direction.md  20260301-005-Updates.md  20260301-005-Updates_TEMPLATE.txt  20260303-001-Updates.md  20260303-001-Updates_TEMPLATE.txt  20260303-002-Updates.md  20260303-002-Updates_TEMPLATE.txt  20260305-001-shruggie-indexer-spec.md  20260305-002-ecosystem-direction.md  20260305-003-metadexer-project-direction.md  20260305-004-metadexer-overview.md  20260320-001-v3-schema-version-bump.md  (+25 more)
.github/: copilot-instructions.md
.github/workflows/: docs.yml  release.yml
changelog/: index.html
docs/: changelog.md  index.md
docs/getting-started/: exiftool.md  installation.md  quickstart.md
docs/porting-reference/: Base64DecodeString_DependencyCatalog.md  Date2UnixTime_DependencyCatalog.md  DirectoryId_DependencyCatalog.md  FileId_DependencyCatalog.md  MakeIndex_DependencyCatalog.md  MakeIndex_OperationsCatalog.md  MakeIndex_OutputSchema.json  TempOpen_DependencyCatalog.md  (+4 more)
hooks/: hook-chardet.py
porting-reference/: MakeIndex(MetadataFileParser).ps1  index.html
schema/: index.html  shruggie-indexer-v2.schema.json  shruggie-indexer-v3.schema.json
scripts/: build.ps1  build.sh  lint.ps1  lint.sh  test.ps1  test.sh  venv-setup.ps1  venv-setup.sh
search/: search_index.json
tests/: conftest.py  test_integration_mmd_pipeline.py  test_meta_merge_delete.py  test_sidecar_exclusion.py
user/: index.html
user-guide/: index.html
(+175 files in other folders)
