# ─── Build system ───────────────────────────────────────────────────────────

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ─── Package metadata ──────────────────────────────────────────────────────

[project]
name = "shruggie-indexer"
description = "Filesystem indexer with hash-based identity, metadata extraction, and structured JSON output"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{name = "William Thompson"}]
keywords = ["indexer", "filesystem", "metadata", "exif", "hashing"]
dynamic = ["version"]
dependencies = [
    "click>=8.1",
    "orjson>=3.9",
    "pyexiftool>=0.5",
    "tqdm>=4.65",
]

[project.optional-dependencies]
gui = ["customtkinter>=5.2"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "jsonschema>=4.17",
    "pydantic>=2.0",
    "ruff>=0.3",
    "rich>=13.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
all = ["shruggie-indexer[gui]"]

# ─── Entry points ──────────────────────────────────────────────────────────

[project.scripts]
shruggie-indexer = "shruggie_indexer.cli.main:main"

[project.gui-scripts]
shruggie-indexer-gui = "shruggie_indexer.gui.app:main"

# ─── Hatchling configuration ───────────────────────────────────────────────

[tool.hatch.version]
path = "src/shruggie_indexer/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/shruggie_indexer"]

# ─── Pytest ────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "platform_windows: marks tests that only run on Windows",
    "platform_linux: marks tests that only run on Linux",
    "platform_macos: marks tests that only run on macOS",
    "requires_exiftool: marks tests that require exiftool on PATH",
    "sidecar: Tests for sidecar discovery, exclusion, and merge behavior",
    "mmd: Tests for MetaMergeDelete pipeline",
    "integration: Full pipeline integration tests (slower)",
    "destructive: Tests that modify the filesystem (use tmp copies)",
]

# ─── Ruff ──────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]
extend-exclude = ["*.spec"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "TCH"   # flake8-type-checking
]

[tool.ruff.lint.isort]
known-first-party = ["shruggie_indexer"]

# ─── PyInstaller (reference only — actual builds use .spec files) ──────────

[tool.pyinstaller]
# This table is not consumed by pyinstaller directly.
# It is included as a documentation aid; the build scripts
# (scripts/build.ps1, scripts/build.sh) invoke pyinstaller
# with explicit arguments or .spec files. See §13.4.
